[tool.poetry]
name = "ikflow"
version = "0.1.0"
description = "Open source implementation of the 'IKFlow' inverse kinematics solver"
authors = ["Jeremy Morgan <jsmorgan6@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.0,<=3.8.19"
FrEIA = "0.2"
#jrl = { git = "https://github.com/jstmn/jrl.git", branch = "master" }
jrl = { git = "https://github.com/jstmn/jrl.git", rev = "38ac80bf8be7b2a3e05bb9ac10def0c31a859c28" }

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pylint = "^2.16.2"
matplotlib = "^3.7.0"
pytorch-lightning = "1.8.6"
tensorboard = "2.11.0"
wandb = "0.13.8"
pandas = "1.5.3"
tabulate = "0.9.0"
ipykernel = "^6.28.0"
nbconvert = "^7.14.1"
jupyter = "^1.0.0"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
